fix layout shift

--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
 }
 body {
   font-family: "Electrolize", sans-serif;
-  background-color: white;
+  background-color: snow;
   color: var(--black);
 }
 header.mv {
